--- a/source_sass/styles.scss
+++ b/source_sass/styles.scss
@@ -4,3 +4,235 @@
 @import "variables";
 @import "mixins";
 @import "base";
+body {
+    list-style: none;
+    font-family: 'Russo One', sans-serif;
+}
+header {
+    width: 100%;
+    background-color: white;
+    position: fixed;
+    z-index: 5;
+    }
+h1 {
+    color: #111;
+    font-family: 'Russo One', sans-serif;
+    text-align: center;
+}
+
+nav {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    width: 100%;
+    &.large{
+    height: 80px;
+    font-size:40px;
+    @include transition(font-size 0.5s ease);
+    }
+    &.small{
+    height: 40px;
+    font-size:20px;
+    @include transition(font-size 0.5s ease);
+    }
+}
+
+nav li {
+    float: left;
+}
+nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+nav li a.nav-active {
+    background-color: gray;
+}
+
+video {
+    margin: auto;
+    width: 100%;
+}
+
+#section1 {
+    position: relative;
+}
+#section1 h2 {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    color: white;
+    font-family: 'Russo One', sans-serif;
+
+}
+#section1 p {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    top: 20%;
+    color: white;
+    font-family: 'Russo One', sans-serif;
+}
+#section2 {
+    position: relative;
+    width: 100%;
+}
+
+button {
+    transition: color 0.5s ease;
+    -webkit-transition: color 0.5s ease;
+    -moz-transition: color 0.5s ease;
+    -o-transition: color 0.5s ease;
+    color: #adadad;
+    z-index: 4;
+    position: absolute;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    top: 80%;
+    margin-top: 200px;
+    font-size: 100px;
+    color: rgba(1,6,13,0.7);
+}
+#leftbtn{
+    left: 80px;
+
+    font-size: 48px;
+}
+#rightbtn {
+    right: 80px;
+
+    font-size: 48px;
+}
+
+#section2 div div {
+    display: block;
+    width: 100%;
+    position: relative;
+}
+#section2 div div img {
+    width: 100%;
+    position: absolute;
+    left: 0;
+    rigth: 0;
+    z-index:-999;
+    &.active{
+        @include transition(opacity 1s ease);
+        opacity: 1;
+    }
+    &.inactive{
+        @include transition(opacity 1s ease);
+        opacity: 0;
+    }
+}
+
+
+#section3 {
+    position: relative;
+    width: 100%;
+    min-height: 450px;
+    margin-top: 700px;
+    background-image: url("../media/logo.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#section3 ul {
+    position: absolute;
+    margin: auto;
+    width: 100%;
+    padding: 10px;
+}
+#section3 ul div.img {
+    margin: 5px;
+    float: left;
+    width: 24%;
+}
+
+
+
+#section3 ul div.img img {
+    width: 100%;
+    height: auto;
+}
+
+#section3 ul div.desc {
+    padding: 15px;
+    text-align: center;
+}
+
+#section4 {
+    position: relative;
+    width: 100%;
+    min-height: 400px;
+    background-image: url("../media/logo.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+#section4 ul {
+    position: absolute;
+    margin: auto;
+    width: 100%;
+    padding: 10px;
+}
+#section4 ul div.img {
+    margin: 5px;
+    float: left;
+    width: 24%;
+    &:hover{opacity:0.7;}
+}
+
+.modal {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    width:100%;
+    height:100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+}
+#modal-content{
+    margin: auto;
+    display:block;
+    width:80%;
+    max-width:800px;
+}
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+
+#section4 ul div.img img {
+    width: 100%;
+    height: auto;
+}
+
+#section4 ul div.desc {
+    padding: 15px;
+    text-align: center;
+}
+
+footer {
+    position: relative;
+    height: 200px;
+    background-color: gray;
+    text-align: center;
+}
+#icons {
+    padding: 45px 0 30px 0;
+}
